force-app/src/objects/TR1__Off_Limit_Payload__c.object
<CustomObject>
    <description>An internal object to help with the calculation storing the context.</description>
    <fields>
        <fullName>TR1__ATS_Stage_After__c</fullName>
        <label>ATS Stage After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ATS_Stage_Before__c</fullName>
        <label>ATS Stage Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Recalculator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox is checked if a Payload record created by OffLimitRecalculator global class</description>
        <inlineHelpText>The checkbox is checked if a Payload record created by OffLimitRecalculator global class</inlineHelpText>
        <label>Is Recalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Role_After__c</fullName>
        <label>Job Role After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Role_Before__c</fullName>
        <label>Job Role Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Off_Limit_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Off Limit Info record related to the Off Limit Payload</description>
        <inlineHelpText>The Off Limit Info record related to the Off Limit Payload</inlineHelpText>
        <label>Off Limit Info</label>
        <referenceTo>TR1__Off_Limit_Info__c</referenceTo>
        <relationshipLabel>Off Limit Payloads</relationshipLabel>
        <relationshipName>Off_Limit_Payloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Process_Time__c</fullName>
        <description>Used to determine the order in which the records should be processed</description>
        <inlineHelpText>Used to determine the order in which the records should be processed</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Processor__c</fullName>
        <description>Name of the event processor class that should handle the payload</description>
        <label>Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Triggered_JobId__c</fullName>
        <description>Specify the Job Id that triggered the calculation</description>
        <inlineHelpText>Specify the Job Id that triggered the calculation</inlineHelpText>
        <label>Triggered JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Off Limit Payload</label>
    <nameField>
        <displayFormat>OLPAY-{00000}</displayFormat>
        <label>Off Limit Payload</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Off Limit Payloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>